# landlockconfig

./: COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  cbindgen.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
c/: Makefile  landlockconfig.h  sandboxer.c
c/examples/: .gitignore  Makefile  sandboxer.c
examples/: micro-var.toml  micro-write-tmp.toml  mini-scoped.json  mini-write-tmp.json  mini-write-tmp.toml  sandboxer.rs  verbose-write-tmp.json
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/src/: lib.rs
go/: Makefile  config.toml  go.mod  go.sum  landlockconfig.go  sandboxer.go
go/cmd/sandboxer/: sandboxer.go
include/: Makefile  landlockconfig.h  sandboxer.c
llconfig/: Cargo.toml  build.rs
llconfig/src/: main.rs
pkg/: .gitignore
pkg/arch/: .gitignore  Dockerfile  Makefile  PKGBUILD  README.md
pkg/debian/: .gitignore  Dockerfile  Makefile  README.md
pkg/debian/debian/: .gitignore  changelog  control  copyright  liblandlockconfig-dev.install  liblandlockconfig0.docs  liblandlockconfig0.install  llconfig.install  rules
pkg/nix/: .gitignore  Makefile  README.md  composition.nix  default.nix  landlockconfig.nix  llconfig.nix
schema/: check.sh  landlockconfig.json
src/: config.rs  ffi.rs  lib.rs  nonempty.rs  parser.rs  tests_abi.rs  tests_compose.rs  tests_helpers.rs  tests_parser.rs  tests_variable.rs  variable.rs
tests/: parser.rs
tests/composition/: README.md  golden-debug.txt  s.json  s.toml
tests/composition/source/: s1.json  s1.toml  s2.toml
