[package]
name = "landlockconfig"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Sandboxer library leveraging Landlock with JSON or TOML configuration"
homepage = "https://landlock.io"
repository = "https://github.com/landlock-lsm/island"
license = "MIT OR Apache-2.0"
keywords = ["access-control", "linux", "sandbox", "security", "json", "toml"]
categories = ["config", "filesystem", "os::linux-apis", "virtualization"]
exclude = [".gitignore"]
readme = "README.md"

[features]
default = ["toml"]

[dependencies]
landlock = "0.4.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
toml = { version = "0.8.20", optional = true }

[dev-dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }

[[example]]
name = "sandboxer"
required-features = ["toml"]
