[workspace]
resolver = "2"
members = ["ffi"]

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
description = "Sandboxer library leveraging Landlock with JSON or TOML configuration"

[workspace.dependencies]
landlock = "0.4.3"

[package]
name = "landlockconfig"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage = "https://landlock.io"
repository = "https://github.com/landlock-lsm/landlockconfig"
license.workspace = true
keywords = ["access-control", "linux", "sandbox", "security", "json", "toml"]
categories = ["config", "filesystem", "os::linux-apis", "virtualization"]
exclude = [".gitignore"]
readme = "README.md"

[features]
default = ["toml"]

[dependencies]
landlock.workspace = true
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
toml = { version = "0.8.20", optional = true }

[dev-dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
jsonschema = { version = "0.30.0", default-features = false }
lazy_static = "1.5.0"

[[example]]
name = "sandboxer"
required-features = ["toml"]
