[package]
name = "landlockconfig_ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "landlockconfig"

[dependencies]
landlock.workspace = true
landlockconfig = { path = ".." }
libc = "0.2.171"

[build-dependencies]
cbindgen = "0.28.0"

[features]
capi = []

[package.metadata.capi.header]
subdirectory = false
generation = false
